# react-native-common-crypto

./: README.md  index.js  package.json
android/: CMakeLists.txt  build.gradle
android/lib/scripts/android-openssl/: excalibur-build.sh  setenv-android.sh
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: excalibur_crypto.cpp  excalibur_crypto_jni.cpp
android/src/main/java/com/xclbr/crypto/: RNExcaliburCryptoModule.java  RNExcaliburCryptoPackage.java
ios/: ExcaliburConnection.h  ExcaliburConnection.m  ExcaliburOpenSSL.h  ExcaliburOpenSSL.mm  RNExcaliburCrypto.h  RNExcaliburCrypto.m  RNExcaliburCrypto.podspec  RNExcaliburCryptoBridge.m  SecureEnclave.swift  Storage.h  Storage.m
ios/RNExcaliburCrypto.xcodeproj/: project.pbxproj
ios/RNExcaliburCrypto.xcodeproj/xcuserdata/alexko.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/RNExcaliburCrypto.xcworkspace/: contents.xcworkspacedata
